# xwa_ddraw_d3d11

./: readme.txt
.github/workflows/: compile.yaml
impl11/: CMakeLists.txt  CMakePresets.json  toolchain-mingw.cmake
impl11/ddraw/: BackbufferSurface.cpp  CMakeLists.txt  DeviceResources.cpp  Direct3DDevice.cpp  Direct3DMaterial.h  Direct3DTexture.cpp  Direct3DViewport.cpp  DirectDraw.cpp  DirectDrawPalette.cpp  DirectDrawPalette.h  MipmapSurface.cpp  TextureSurface.cpp  config.cpp  config.h  ddraw.cfg  ddraw.cpp  ddraw.rc  ddraw.vcxproj  ddraw.vcxproj.filters  joystick.cpp
impl11/shaders/: CMakeLists.txt  shaders.vcxproj
impl11/tests/: CMakeLists.txt  main.cpp
